--- a/index.html
+++ b/index.html
@@ -48,10 +48,17 @@
     <!-- MAIN -->
     <main>
 
+        <!-- BANNER -->
         <section class="banner">
-
+            <div class="container-fluid">
+                <div class="first-img">img</div>
+                <h1>Start Bootstrap</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis provident dolores eaque nulla? Incidunt perferendis ipsum recusandae quaerat, maiores laboriosam consectetur nisi dolore amet minima corporis dolorem esse quam totam.</p>
+            </div>
         </section>
+        <!-- /BANNER -->
 
+        <!-- PORTFOLIO -->
         <section class="portfolio">
             <div class="container">
                 <h2>Portfolio</h2>
@@ -61,11 +68,39 @@
                     <div class="col-12 col-md-6 col-lg-4">img</div>
                     <div class="col-12 col-md-6 col-lg-4">img</div>
                     <div class="col-12 col-md-6 col-lg-4">img</div>
-                    <div class="col-12 col-md-6 col-lg-4">img</div>
-                    
+                    <div class="col-12 col-md-6 col-lg-4">img</div> 
                 </div>
             </div>
         </section>
+        <!-- /PORTFOLIO -->
+
+        <!-- ABOUT -->
+        <section class="about">
+            <div class="container-fluid">
+                <div class="ms_container">
+                    <h2>About</h2>
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nisi ipsum doloribus expedita perspiciatis recusandae quos cum nulla nesciunt ipsa, aliquam praesentium, mollitia, placeat consequatur. Aliquam atque facilis esse enim?</p>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nisi ipsum doloribus expedita perspiciatis recusandae quos cum nulla nesciunt ipsa, aliquam praesentium, mollitia, placeat consequatur. Aliquam atque facilis esse enim?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /ABOUT -->
+
+        <!-- CONTACT -->
+        <section class="contact">
+            <div class="container-fluid">
+                <div class="ms_container">
+                    <h2>Contact me</h2>
+                </div>
+            </div>
+        </section>
+        <!-- /CONTACT -->
 
     </main>
     <!-- /MAIN -->
