--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
             <div class="container-fluid">
                 <div class="ms_container">
                     <h2>Contact me</h2>
+                    <ul>
+                        <li>Name</li>
+                        <div class="line"></div>
+                        <li>Email Address</li>
+                        <div class="line"></div>
+                        <li>Phone Number</li>
+                        <div class="line"></div>
+                        <li>Message</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -107,7 +116,32 @@
 
     <!-- FOOTER -->
     <footer>
-
+        <div class="footer-top">
+            <div class="container-fluid">
+                    <div class="ms_container-2">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <h3>Location</h3>
+                            <p>2215 John Daniel Drive Clark, MO 54243</p>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <h3>Around the web</h3>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <h3>About freelancer</h3>
+                            <p>Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom"></div>
     </footer>
     <!-- /FOOTER -->
 
