--- a/index.html
+++ b/index.html
@@ -127,10 +127,18 @@
                         <div class="col-12 col-md-4">
                             <h3>Around the web</h3>
                             <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>
+                                    <i class="fab fa-facebook-f"></i>
+                                </li>
+                                <li>
+                                    <i class="fab fa-google-plus-g"></i>
+                                </li>
+                                <li>
+                                    <i class="fab fa-twitter"></i>
+                                </li>
+                                <li>
+                                    <i class="fab fa-linkedin-in"></i>
+                                </li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-4">
