--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-8 col-md-6">
-                    <div class="header-title">Start Bootstrap</div>
+                    <div class="header-title">
+                        <p>Start Bootstrap</p>
+                    </div>
                 </div>
                 <div class="col-4 col-md-6">
                     <div class="header-menu">
@@ -50,10 +52,21 @@
 
         <!-- BANNER -->
         <section class="banner">
-            <div class="container-fluid">
-                <div class="first-img">img</div>
-                <h1>Start Bootstrap</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis provident dolores eaque nulla? Incidunt perferendis ipsum recusandae quaerat, maiores laboriosam consectetur nisi dolore amet minima corporis dolorem esse quam totam.</p>
+            <div class="container">
+                <div class="first-img">
+                    <img src="img/avatar.svg" alt="">
+                </div>
+                <div class="banner-text">
+                    <h1>Start Bootstrap</h1>
+                    <div class="star-decoration">
+                        <span class="line"></span>
+                        <span class="star">
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span class="line"></span>
+                    </div>
+                    <p>Graphic artist - Web designer - Illustrator</p>
+                </div>
             </div>
         </section>
         <!-- /BANNER -->
@@ -62,7 +75,14 @@
         <section class="portfolio">
             <div class="container">
                 <h2>Portfolio</h2>
-                <div class="row">
+                <div class="star-decoration">
+                    <span class="line line-dark"></span>
+                    <span class="star">
+                        <i class="fas fa-star"></i>
+                    </span>
+                    <span class="line line-dark"></span>
+                </div>
+                <div class="row g-4">
                     <div class="col-12 col-md-6 col-lg-4">img</div>
                     <div class="col-12 col-md-6 col-lg-4">img</div>
                     <div class="col-12 col-md-6 col-lg-4">img</div>
@@ -76,8 +96,8 @@
 
         <!-- ABOUT -->
         <section class="about">
-            <div class="container-fluid">
-                <div class="ms_container">
+            <div class="ms_container">
+                <div class="container-fluid">
                     <h2>About</h2>
                     <div class="row">
                         <div class="col-12 col-md-6">
@@ -94,8 +114,8 @@
 
         <!-- CONTACT -->
         <section class="contact">
-            <div class="container-fluid">
-                <div class="ms_container">
+            <div class="ms_container">
+                <div class="container-fluid">
                     <h2>Contact me</h2>
                     <ul>
                         <li>Name</li>
@@ -117,8 +137,8 @@
     <!-- FOOTER -->
     <footer>
         <div class="footer-top">
-            <div class="container-fluid">
-                    <div class="ms_container-2">
+            <div class="ms_container-2">
+                    <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <h3>Location</h3>
@@ -149,7 +169,9 @@
                 </div>
             </div>
         </div>
-        <div class="footer-bottom"></div>
+        <div class="footer-bottom">
+            <p>Copyright &copy; Your Website 2019</p>
+        </div>
     </footer>
     <!-- /FOOTER -->
 
