--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <div class="header-menu">
                         <div class="text-menu">
                             <ul>
-                                <li><a href="">Portfolio</a></li>
-                                <li><a href="">About</a></li>
-                                <li><a href="">Contact</a></li>
+                                <li><a href="#portfolio-link">Portfolio</a></li>
+                                <li><a href="#about-link">About</a></li>
+                                <li><a href="#contact-link">Contact</a></li>
                             </ul>
                         </div>
                         <div class="burger-menu">
@@ -53,7 +53,7 @@
         <!-- BANNER -->
         <section class="banner">
             <div class="container">
-                <div class="first-img">
+                <div class="avatar-img">
                     <img src="img/avatar.svg" alt="">
                 </div>
                 <div class="banner-text">
@@ -72,39 +72,68 @@
         <!-- /BANNER -->
 
         <!-- PORTFOLIO -->
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio-link">
             <div class="container">
-                <h2>Portfolio</h2>
-                <div class="star-decoration">
-                    <span class="line line-dark"></span>
-                    <span class="star">
-                        <i class="fas fa-star"></i>
-                    </span>
-                    <span class="line line-dark"></span>
+                <div class="ms_section-title">
+                    <h2>Portfolio</h2>
+                    <div class="star-decoration">
+                        <span class="line line-dark"></span>
+                        <span class="star">
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span class="line line-dark"></span>
+                    </div>
                 </div>
                 <div class="row g-4">
-                    <div class="col-12 col-md-6 col-lg-4">img</div>
-                    <div class="col-12 col-md-6 col-lg-4">img</div>
-                    <div class="col-12 col-md-6 col-lg-4">img</div>
-                    <div class="col-12 col-md-6 col-lg-4">img</div>
-                    <div class="col-12 col-md-6 col-lg-4">img</div>
-                    <div class="col-12 col-md-6 col-lg-4">img</div> 
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-2" src="img/cabin.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-2" src="img/cake.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-2" src="img/circus.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-2" src="img/game.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-2" src="img/safe.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-2" src="img/submarine.png" alt="">
+                    </div> 
                 </div>
             </div>
         </section>
         <!-- /PORTFOLIO -->
 
         <!-- ABOUT -->
-        <section class="about">
+        <section class="about" id="about-link">
             <div class="ms_container">
                 <div class="container-fluid">
-                    <h2>About</h2>
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nisi ipsum doloribus expedita perspiciatis recusandae quos cum nulla nesciunt ipsa, aliquam praesentium, mollitia, placeat consequatur. Aliquam atque facilis esse enim?</p>
+                    <div class="ms_section-title">
+                        <h2>About</h2>
+                        <div class="star-decoration">
+                            <span class="line"></span>
+                            <span class="star">
+                                <i class="fas fa-star"></i>
+                            </span>
+                            <span class="line"></span>
                         </div>
-                        <div class="col-12 col-md-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nisi ipsum doloribus expedita perspiciatis recusandae quos cum nulla nesciunt ipsa, aliquam praesentium, mollitia, placeat consequatur. Aliquam atque facilis esse enim?</p>
+                    </div>
+                    <div class="row">
+                        <div class="text-start col-12 col-md-6">
+                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and Javascript as well as optional LESS stylesheets for easy customization</p>
+                        </div>
+                        <div class="text-start col-12 col-md-6">
+                            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                        </div>
+                        <div class="col-12">
+                            <button type="button" class="btn btn-outline-light">
+                                <i class="fas fa-download"></i>
+                                Download
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -113,10 +142,17 @@
         <!-- /ABOUT -->
 
         <!-- CONTACT -->
-        <section class="contact">
+        <section class="contact" id="contact-link">
             <div class="ms_container">
                 <div class="container-fluid">
                     <h2>Contact me</h2>
+                    <div class="star-decoration">
+                        <span class="line line-dark"></span>
+                        <span class="star">
+                            <i class="fas fa-star"></i>
+                        </span>
+                        <span class="line line-dark"></span>
+                    </div>
                     <ul>
                         <li>Name</li>
                         <div class="line"></div>
@@ -163,7 +199,7 @@
                         </div>
                         <div class="col-12 col-md-4">
                             <h3>About freelancer</h3>
-                            <p>Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap</p>
+                            <p>Freelance is a free to use, open source Bootstrap theme created by <a href="">Start Bootstrap</a></p>
                         </div>
                     </div>
                 </div>
