--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="banner">
             <div class="container">
                 <div class="avatar-img">
-                    <img src="img/avatar.svg" alt="">
+                    <img class="img-fluid" src="img/avatar.svg" alt="">
                 </div>
                 <div class="banner-text">
                     <h1>Start Bootstrap</h1>
@@ -86,22 +86,22 @@
                 </div>
                 <div class="row g-4">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-2" src="img/cabin.png" alt="">
+                        <img class="img-fluid rounded-2" src="img/cabin.png" alt="">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-2" src="img/cake.png" alt="">
+                        <img class="img-fluid rounded-2" src="img/cake.png" alt="">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-2" src="img/circus.png" alt="">
+                        <img class="img-fluid rounded-2" src="img/circus.png" alt="">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-2" src="img/game.png" alt="">
+                        <img class="img-fluid rounded-2" src="img/game.png" alt="">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-2" src="img/safe.png" alt="">
+                        <img class="img-fluid rounded-2" src="img/safe.png" alt="">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-2" src="img/submarine.png" alt="">
+                        <img class="img-fluid rounded-2" src="img/submarine.png" alt="">
                     </div> 
                 </div>
             </div>
@@ -153,15 +153,21 @@
                         </span>
                         <span class="line line-dark"></span>
                     </div>
-                    <ul>
-                        <li>Name</li>
-                        <div class="line"></div>
-                        <li>Email Address</li>
-                        <div class="line"></div>
-                        <li>Phone Number</li>
-                        <div class="line"></div>
-                        <li>Message</li>
-                    </ul>
+                    <form>
+                        <div class="mb-3">
+                          <label for="exampleInputName" class="form-label">Name</label>
+                          <input type="name" class="form-control" id="exampleInputName">
+                        </div>
+                        <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPhonenumber" class="form-label">Phone number</label>
+                            <input type="phone" class="form-control" id="exampleInputPhonenumber">
+                          </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
                 </div>
             </div>
         </section>
