--- a/index.html
+++ b/index.html
@@ -86,22 +86,52 @@
                 </div>
                 <div class="row g-4">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="img-fluid rounded-2" src="img/cabin.png" alt="">
+                        <div class="ms_img-container">
+                            <img class="img-fluid rounded-2" src="img/cabin.png" alt="">
+                            <div class="after">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="img-fluid rounded-2" src="img/cake.png" alt="">
+                        <div class="ms_img-container">
+                            <img class="img-fluid rounded-2" src="img/cake.png" alt="">
+                            <div class="after">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="img-fluid rounded-2" src="img/circus.png" alt="">
+                        <div class="ms_img-container">
+                            <img class="img-fluid rounded-2" src="img/circus.png" alt="">
+                            <div class="after">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="img-fluid rounded-2" src="img/game.png" alt="">
+                        <div class="ms_img-container">
+                            <img class="img-fluid rounded-2" src="img/game.png" alt="">
+                            <div class="after">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="img-fluid rounded-2" src="img/safe.png" alt="">
+                        <div class="ms_img-container">
+                            <img class="img-fluid rounded-2" src="img/safe.png" alt="">
+                            <div class="after">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="img-fluid rounded-2" src="img/submarine.png" alt="">
+                        <div class="ms_img-container">
+                            <img class="img-fluid rounded-2" src="img/submarine.png" alt="">
+                            <div class="after">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                        </div>
                     </div> 
                 </div>
             </div>
@@ -153,20 +183,24 @@
                         </span>
                         <span class="line line-dark"></span>
                     </div>
-                    <form>
+                    <form class="ms_form">
                         <div class="mb-3">
-                          <label for="exampleInputName" class="form-label">Name</label>
-                          <input type="name" class="form-control" id="exampleInputName">
+                            <label for="exampleInputName" class="form-label">Name</label>
+                            <input type="name" class="form-control ms_input" id="exampleInputName">
                         </div>
                         <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control ms_input" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPhonenumber" class="form-label">Phone number</label>
-                            <input type="phone" class="form-control" id="exampleInputPhonenumber">
+                            <input type="phone" class="form-control ms_input" id="exampleInputPhonenumber">
                           </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <div class="mb-3">
+                            <label for="exampleFormControlMessage" class="form-label">Message</label>
+                            <textarea class="form-control ms_text-area" id="exampleFormControlMessage" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn ms_btn">Send</button>
                       </form>
                 </div>
             </div>
