--- a/index.html
+++ b/index.html
@@ -224,22 +224,22 @@
                             <h3>Around the web</h3>
                             <ul>
                                 <li>
-                                    <i class="fab fa-facebook-f"></i>
+                                   <a href=""><i class="fab fa-facebook-f"></i></a> 
                                 </li>
                                 <li>
-                                    <i class="fab fa-google-plus-g"></i>
+                                    <a href=""><i class="fab fa-google-plus-g"></i></a>
                                 </li>
                                 <li>
-                                    <i class="fab fa-twitter"></i>
+                                   <a href=""><i class="fab fa-twitter"></i></a> 
                                 </li>
                                 <li>
-                                    <i class="fab fa-linkedin-in"></i>
+                                   <a href=""><i class="fab fa-linkedin-in"></i></a> 
                                 </li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-4">
                             <h3>About freelancer</h3>
-                            <p>Freelance is a free to use, open source Bootstrap theme created by <a href="">Start Bootstrap</a></p>
+                            <p>Freelance is a free to use, open source Bootstrap theme created by <span class="active">Start Bootstrap</span></p>
                         </div>
                     </div>
                 </div>
